# notebookr

./: README.md  pyproject.toml  testnotebook.ipynb
src/notebookr/: cli.py
