[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebookr"
version = "0.1.0"
authors = [
  { name="Peter Dresslar", email="your.email@example.com" },
]
description = "Setup development environment for Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
notebookr = "notebookr.cli:main"
